--- a/proyectolibreria/proyectolibreria/proyectolibreria.csproj
+++ b/proyectolibreria/proyectolibreria/proyectolibreria.csproj
@@ -130,6 +130,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ArticuloController.cs" />
     <Compile Include="Controllers\ClienteController.cs" />
+    <Compile Include="Controllers\FacturaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SucursaleController.cs" />
     <Compile Include="Global.asax.cs">
@@ -168,8 +169,10 @@
     <Compile Include="Models\ViewModels\ArticuloViewModel.cs" />
     <Compile Include="Models\ViewModels\BaseViewModel.cs" />
     <Compile Include="Models\ViewModels\ClienteViewModel.cs" />
+    <Compile Include="Models\ViewModels\FacturaViewModel.cs" />
     <Compile Include="Models\ViewModels\ListArticuloViewModel.cs" />
     <Compile Include="Models\ViewModels\ListClienteViewModel.cs" />
+    <Compile Include="Models\ViewModels\ListFacturaViewModel.cs" />
     <Compile Include="Models\ViewModels\ListSucursaleViewModel.cs" />
     <Compile Include="Models\ViewModels\SucursaleViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -3244,6 +3247,8 @@
     <Content Include="Views\Sucursale\Index.cshtml" />
     <Content Include="Views\Sucursale\Nuevo.cshtml" />
     <Content Include="Views\Sucursale\Editar.cshtml" />
+    <Content Include="Views\Factura\Index.cshtml" />
+    <Content Include="Views\Factura\Nuevo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
